# pocketsphinx-android

./: .gitignore  CMakeLists.txt  build.gradle
gradle/wrapper/: gradle-wrapper.properties
jni/: Android.mk  Application.mk  pocketsphinx_wrap.c  sphinxbase_wrap.c
jni/edu/cmu/pocketsphinx/: PocketSphinx.java  PocketSphinxJNI.java  SWIGTYPE_p_p_p_mfcc_t.java  SWIGTYPE_p_void.java  SphinxBase.java  SphinxBaseJNI.java  config.java  decoder.java  feature.java  frontEnd.java  fsgModel.java  hypothesis.java  jsgf.java  jsgfIterator.java  jsgfRule.java  lattice.java  logMath.java  nBest.java  nBestIterator.java  nBestList.java  nGramModel.java  nGramModelSet.java  nGramModelSetIterator.java  segment.java  segmentIterator.java  segmentList.java
